
     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  Zope 2.10.0 beta 2 (unreleased)

    Bugs Fixed

      - Acquisition wrappers now correctly proxy __contains__.

  Zope 2.10.0 beta 1 (2006/05/30)

    Restructuring

      - Zope 2.10+ now includes site.zcml as part of its instance 
        creation skel directory.  As a consequence Five now requires 
        this file to exist in every instance.  If upgrading a site 
        from Zope 2.9 to 2.10, you will need to copy site.zcml and 
        package-includes/ from your installed Zope installation 
        location (skel/etc/) into the etc/ directory of your upgraded 
        instance.
  
        The rationale for requiring this new file is to bring Zope 2 
        instances closer in consistency to Zope 3 instances.  It also 
        eases use of Zope 3 coding techniques in Zope 2 and removes 
        some confusion when trying to run pure Zope 3 applications on 
        Zope 2.

      - Products.PageTemplates now uses the Zope 3 ZPT implementation
        in zope.pagetemplate.

      - The TAL package has been deprecated in favour of the TAL
        engine from zope.tal.

      - Products.PageTemplates.TALES has been deprecated in favour of
        the TALES engine from zope.tales.

      - ZTUtils.Iterator has been deprecated in favour of the TALES
        iterator implementation in zope.tales.tales.

      - ZCatalog: removed manage_deleteIndex(), manage_delColumns()
        which were deprecated since Zope 2.4

      - deprecated the zLOG module. Use Pythons 'logging' module instead.

      - replaced all zLOG occurences (expect the zLOG module itself) with 
        the 'logging' module

      - PluginIndexes/TextIndex is deprecated. Use ZCTextIndex instead
